public/assets/css/main.css
body {
	background-color: #d9edf7;
}

hr {
	border-color: #337ab7 !important;
}

#target {
	width: 75%;
	margin: 0 auto;
}

.section {
	margin: 20px;
	background-color: white;
	padding-bottom: 20px;
}

.section-title {
	color:white;
	background-color: #235580;
	border-color: #235580;
	text-align: center;
	padding: 10px 15px;
	border-radius: 3px;
}

.collapse--a, 
.collapse--a:link,
.collapse--a:hover, 
.collapse--a:visited,
.collapse--a:active {
	color: white !important;
	text-decoration: none !important;
}

h3[class$="descriptions-title"] .collapse--a,
h3[class^="characterInfo-advancement-title-"] .collapse--a,
h3[class$="notations-title"] .collapse--a {
	color: black !important;
}

.section--panel {
	margin: 0 20px;
}

.section--panel ~ .section--panel {
	margin-top: 20px;
}

.section--panel-heading {
	font-size: 20px;
	text-align: center;
}

.section--panel-body {
	background-color: #d9edf7;
}

.section-desc {}

.Skills-content .types-list,
.Derived-Attributes-content .types-list {
	padding:0px;	
}

.Skills-content .types-list .row {
	margin-left: 25%;
}

.Derived-Attributes-content .types-list .row {
	margin: auto;
}

.Derived-Attributes-content .types-list .row .types-list-item,
.Skills-content .types-list .row .types-list-item {
		padding: 0px;
	// margin-right: 1px;
	// min-height: 103px;
} 

.Derived-Attributes-content .types-list-item, 
.Skills-content .types-list-item {
		border-right: 1px solid black;
		border-bottom: 1px solid black;
		border-top: 1px solid black;
}

.Derived-Attributes-content .types-list-item:first-of-type,
.Skills-content .types-list-item:first-of-type,
.Derived-Attributes-content .types-list-item:nth-of-type(4) {
	border-left: 1px solid black;
}

.Derived-Attributes-content .types-list-item:nth-of-type(4),
.Derived-Attributes-content .types-list-item:nth-of-type(5),
.Derived-Attributes-content .types-list-item:nth-of-type(6) {
	margin-top: 10px;
}

div[class^="action-"],
div[class^="descriptions-title-"],
.Skills-content .types-list-title,
.Derived-Attributes-content .types-list-title {
	text-align: center;
	background-color: #70a1cc;
	color: black;
	font-weight: bold;
}

div[class^="descriptions-title-"] {
	font-weight: normal;
}

.types-list-content--bullet {
	list-style-type: bullet;
}

.list-no-bullet {
	list-style-type:none;
}

.types-list-content--no-bullet {
	list-style-type: none;
	padding-left: 10px;
}

h3[class$="descriptions-title"],
h3[class$="notations-title"],
h3[class^="characterInfo-advancement-title-"] {
	text-align: center;
	background-color: #70a1cc;
	color: black;
	font-weight: bold;
	}

	/*SubActions aka cards?*/
.subActions-items {
	margin-right: 0;
	margin-left: 15%;
	margin-top: 5px;
}
.subActions-item {
	border: 1px solid black;
	margin-bottom: 5px;
	margin-right:5px;
	min-height: 140px;
	background-color: #d9edf7;
}

.subActions-item:last-of-type {
	margin-right: 0;
}

div[class$="-system-Equipment-title"],
.subActions-item--heading {
	padding: 5px;
	border-bottom: 1px solid black;
	background-color: #235580;
	color: white;
}

div[class$="-system-Equipment-title"],
.subActions-item--heading-title {
	font-weight: bold;
}

.Equipment-heading-right,
.subActions-item--heading-action-cost {
	text-align: right;
	font-weight: bold;
}

.subActions-item--body {}

.subActions-item-desc {}

.subActions-item-noRoll span,
.subActions-item-desc span {
	font-weight: bold;
}

.subActions-item-noRoll {}

.subActions-item-special {}

.subActions-item-special span {
	font-weight: bold;
	color: #FFA71A;

}

.subActions-item-difficulty {}

.subActions-item-positive {}

.subActions-item-onSuccess span,
.subActions-item-positive span {
	color:green;
	font-weight: bold;
}

.subActions-item-negative {}

.subActions-item-difficulty span,
.subActions-item-onFailure span,
.subActions-item-negative span {
	color: red;
	font-weight: bold;
}

.subActions-item-onSuccess {}

.subActions-item-onFailure {}

.subActions-item-bonus {}

.subActions-item-bonus span {
	color: blue;
	font-weight: bold;
}

.horizontal-rule {
	margin: 10px 0;
}

.Feats-notations h3{
	margin-top: 0;
	margin-bottom: 0;
}

.types-list {
	background-color: white;
	padding-left: 0;
}

.types-list .types-list-item .types-list {
	padding-left: 40px;
}

.Skills-content .types-list {
	background-color: transparent;
}

.Skills-content .types-list-content--bullet {
	background-color: white;
}

.side-bar.right {
	position:absolute;
  right:0; top:20px; bottom: 20px;
}

.side-bar.left {
	position:absolute;
  left:0; top:20px; bottom: 20px;
}

.side-bar {
	width:12.5%;
	background: #235580;
	color: white;
	padding: 15px;
	border-radius: 3px;
}

